iptables.rules
# Generated by iptables-save v1.4.18 on Fri May  3 15:26:32 2013
*nat
:PREROUTING ACCEPT [13:4416]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [3:181]
:POSTROUTING ACCEPT [3:181]
-A PREROUTING -i wlp0s22f2u2 -p tcp -m tcp --dport 25 -j DNAT --to-destination 89.212.16.128:2525
-A OUTPUT -o lo -p tcp -m tcp --dport 25 -j REDIRECT --to-ports 2525
-A POSTROUTING -s 192.168.0.0/24 -o wlp0s22f2u2 -j MASQUERADE
COMMIT
# Completed on Fri May  3 15:26:32 2013
# Generated by iptables-save v1.4.18 on Fri May  3 15:26:32 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [22:5149]
:TCP - [0:0]
:UDP - [0:0]
:fw-interfaces - [0:0]
:fw-open - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j fw-open
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A TCP -p tcp -m tcp --dport 25 -j ACCEPT
-A TCP -p tcp -m tcp --dport 80 -j ACCEPT
-A TCP -p tcp -m tcp --dport 1248 -j ACCEPT
-A TCP -p tcp -m tcp --dport 2525 -j ACCEPT
-A TCP -p tcp -m tcp --dport 10022 -j ACCEPT
-A TCP -p tcp -m tcp --dport 11022 -j ACCEPT
-A TCP -p tcp -m tcp --dport 12022 -j ACCEPT
-A TCP -p tcp -m tcp --dport 25565 -j ACCEPT
-A fw-interfaces -i wlp0s22f2u2 -j ACCEPT
COMMIT
# Completed on Fri May  3 15:26:32 2013
